--- a/src/components/product/right-side-bar/sideBar.sass
+++ b/src/components/product/right-side-bar/sideBar.sass
@@ -76,6 +76,10 @@
                     border: 1px solid rgba(245, 245, 245, 0.6)
                     color: white
                     margin-top: .7rem
+                    position: relative
+                    @include flex(row, center, center)
+                    .add-card-loading
+                        position: absolute
             .product-detail
                 width: 100%
                 margin-top: .7rem
