add cart only unique items, bugs fix

--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -178,6 +178,8 @@ header
                                 position: absolute
                                 left: 10px
                                 width: 1rem
+                        li
+                            padding: 1rem 1.75rem
                 .profile-active
                     right: 0
                     transition: .3s
