--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -18,6 +18,7 @@
 @import '../../view/Product/product'
 @import '../../view/Browse/browse'
 @import '../../components/shared/auth/auth'
+@import '../../view/Cart/cart.sass'
 
 
 
