header zindex fix, search input focus fix

--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -6,6 +6,7 @@ header
     align-items: center
     font-family: $openSans
     align-self: start
+    z-index: 7
     nav
         @include flex(row, space-between, center)
         @include size(100%, 100%)
