--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -4,7 +4,6 @@
     top: -2px
     z-index: 6
     background-color: #121212
-    // position: relative
     @include responsive_ls
         height: 100px
     .search-black
@@ -13,6 +12,7 @@
         top: 0
         left: 0
         z-index: 4
+        background-color: rgba(18, 18, 18, 0.522)
     .main-header-container
         @include flex(row, space-between, center)
         width: 90%
