products spec fix, link add to browse page category boxes

--- a/src/components/browse/swiper-genre/swiperGenre.sass
+++ b/src/components/browse/swiper-genre/swiperGenre.sass
@@ -43,7 +43,8 @@
                 background-color: $headerBG
                 border-radius: 4px
                 width: 100%
-                a
+                div
+                    cursor: pointer
                     width: 100%
                     color: white
                     @include flex(column, $align: center)
