sidemenu scroll fix, checkout page add

--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -20,6 +20,9 @@
 @import '../../components/shared/auth/auth'
 @import '../../view/Cart/cart.sass'
 
+//global Component
+@import '../../components/checkout/checkout'
+
 
 
 #app
@@ -29,4 +32,6 @@
 
 .active-body
     overflow: hidden
-    height: 100vh
+    height: 100%
+    width: 100%
+    position: absolute
