checkout mobil done

--- a/src/components/checkout/checkout.sass
+++ b/src/components/checkout/checkout.sass
@@ -1,3 +1,6 @@
+@import './order-summary/orderSummary'
+@import './payment-method/paymentMethod'
+    
 #checkout-page
     @include flex(row, center)
     font-family: $openSans
@@ -12,10 +15,12 @@
         top: 0
         z-index: 10
         position: fixed
+        overflow-y: auto 
         @include size(100%, 100%)
         max-width: 1200px
         background-color: white
-        border: 2px solid #4d4d4d
+        @include responsive_sm
+            border: 2px solid #4d4d4d
         .checkout-loading
             @include flex(column, center, center)
             @include size(100%, 100%)
@@ -43,74 +48,10 @@
                         span
                             @include font(.7rem)
                     .close-icon
+                        cursor: pointer
                         width: 13px
                         path
                             fill: rgba(20,20,20,0.72)
             .order-detail
                 @include flex(column)
-                padding: 0 1rem
-                h3
-                    padding: 15px 0
-                    @include font(.875rem, 400)
-                    text-transform: uppercase
-                .order-list
-                    li
-                        padding: 12px 24px
-                        @include flex(row, $align: center)
-                        background-color: #f2f2f2
-                        border-radius: 4px
-                        gap: 10px
-                        img
-                            width: 50px
-                            border-radius: 4px
-                        div
-                            width: 100%
-                            h4
-                                @include font(1rem, 400)
-                                text-overflow: ellipsis
-                                overflow: hidden
-                                width: 80%
-                                height: 1.2em
-                                white-space: nowrap
-                            p
-                                @include font(.875rem, 500)
-                                margin-top: .4rem
-                .price-detail
-                    padding: 12px 24px
-                    background-color: #f2f2f2
-                    border-radius: 4px
-                    margin-top: 1rem
-                    @include flex(column)
-                    gap: .5rem
-                    p   
-                        @include flex(row, space-between, center)
-                        font-size: .875rem
-                        color: rgba(20,20,20,0.72)
-                    .discount
-                        padding-bottom: .5rem 
-                        border-bottom: 1px solid rgba(20,20,20,0.16)
-                    .total
-                        font-weight: 700
-                .discount-box
-                    padding: 24px
-                    background-color: #f2f2f2
-                    border-radius: 4px
-                    margin-top: 1rem
-                    form
-                        @include flex(row, $align: center)
-                        gap: .7rem
-                        border: 1px solid rgba(20,20,20,0.16)
-                        border-radius: 4px
-                        overflow: hidden
-                        input
-                            padding-left: .8rem
-                            width: 100%
-                            &:focus
-                                outline: none
-                        button
-                            height: 100%
-                            padding: .7rem .9rem
-                            background-color: #0078F2
-                            color: white
-                            font-size: 12px
-                            letter-spacing: 1px
+                padding: 0 1rem 13rem
