--- a/src/components/checkout/payment-method/paymentMethod.sass
+++ b/src/components/checkout/payment-method/paymentMethod.sass
@@ -1,48 +1,53 @@
 .order-detail
     .payment-method
+        @include responsive_sm
+            padding: 0 1rem
+            width: calc(100% - 308px)
         h3
             padding: 15px 0
             @include font(.875rem, 400)
             text-transform: uppercase
-    .payment-input
-        form
-            @include flex(column)
-            gap: 1rem
-            .form-container
-                @include flex(row, space-between)
-                width: 100%
-                div
-                    @include flex(column)
-                    width: 46%
-                label
-                    @include font(.9rem, 600)
-                    padding-bottom: .5rem
-                input
-                    width: 100%
-                    border: 1px solid black
-                    border-radius: 4px
-                    height: 35px
-                    padding: 0 .5rem
-                    &:focus
-                        outline: none
-                .input-error
-                    border: 1px solid red !important
-            .card-number
+        .payment-input
+            @include responsive_ls
+                padding: 1rem 5rem
+            form
                 @include flex(column)
-                gap: 0
-                .input-container
+                gap: 1rem
+                .form-container
+                    @include flex(row, space-between)
                     width: 100%
-                    padding: 0 .5rem
-                    border: 1px solid black
-                    border-radius: 4px
-                    @include flex(row, center, center)
+                    div
+                        @include flex(column)
+                        width: 46%
+                    label
+                        @include font(.9rem, 600)
+                        padding-bottom: .5rem
                     input
-                        padding: 0
-                        border: none
-
-                    span
-                        width: 30px
-                        height: 30px
+                        width: 100%
+                        border: 1px solid black
+                        border-radius: 4px
+                        height: 35px
+                        padding: 0 .5rem
+                        &:focus
+                            outline: none
+                    .input-error
+                        border: 1px solid red !important
+                .card-number
+                    @include flex(column)
+                    gap: 0
+                    .input-container
+                        width: 100%
+                        padding: 0 .5rem
+                        border: 1px solid black
+                        border-radius: 4px
                         @include flex(row, center, center)
-                        svg
-                            @include size(auto, auto)
+                        input
+                            padding: 0
+                            border: none
+
+                        span
+                            width: 30px
+                            height: 30px
+                            @include flex(row, center, center)
+                            svg
+                                @include size(auto, auto)
